# nextos_ports_android

./: .gitignore  NOTICE  README.md
.github/workflows/: Compile loader.yml
experiments/bully/: CMakeLists.txt  PLAN.md  STATUS.md
experiments/bully-pc/: PLAN.md  STATUS.md
experiments/bully/src/: asset_archive.c  asset_archive.h  egl_shim.c  imports.c  jni_shim.c  jni_shim.h  main_pc.c  so_util_x64.c  so_util_x64.h
experiments/hollow-recon/: CMakeLists.txt  HANDOFF-2026-06-18.md  MALI450-SHADER-MOONSHOT.md  STATUS.md  gdbshort.sh  gdbworker.sh  gdbworker2.sh  gen-unity-imports.sh  hk_kbd.py  hk_pad.py  hkfds.txt  hkfds2.txt  run_ctrl.sh  run_kbd.sh  saferun.sh  shdump-current-004.gles2  shdump-current-004.glsl  shdump-current-005.gles2  shdump-current-005.glsl  strace.txt
experiments/hollow-recon/src/: egl_shim.c  egl_shim.h  imports_unity.gen.c  jni_shim.c  main_recon.c  pthread_shim.c  recon_egl.c  so_util.c
experiments/hollow-recon/tools/: fbcols.py  fbcursor.py  next-run.sh
experiments/re4-recon/: .gitignore  IMPORTS.txt  RE4-MALI450-PORT.md  RESUME-PROXIMA-SESSAO.md  build_re4.sh
facilitando_o_trabalho/: README.md
facilitando_o_trabalho/receitas/: 02-pthread-e-abi.md  05-audio-opensles-sdl.md  06-controle-input-gptokeyb.md  07-memoria-vram-e-teardown.md  08-texturas-etc1-etc2.md  09-display-e-sdl-driver.md  10-empacotando-portmaster.md  11-ponteiros-handles-e-hooks.md
facilitando_o_trabalho/troubleshooting/: 02-deadlock-job-system.md
ports/bully/: .gitignore  ANALISE-COMPLETA-2026-06-15.md  Bully.sh  CHANGELOG.md  CMakeLists.txt  GPTOKEYB-ESTUDO.md  HANDOFF-R36S-FILTRO-MIPMAP-2026-06-21.md  RE-TEX-FORMAT.md  README.md  STATUS-ETC1-2026-06-19.md  alsoft.conf  build.sh  build_compat.sh  build_compat_gcc.sh  bully.TRILINEAR-test  bully.compat  bully.compat.gcc  bully.compat.gcc.bak-prefiltro  bully.gptk  gameinfo.xml  port.json
ports/carrion/: .gitignore  Carrion.mali450.sh  Carrion.r36s.sh  STATUS.md
ports/chrono/: Chrono Trigger.sh  HANDOFF.md  README.md  build.sh  chrono
ports/crazytaxi/: CMakeLists.txt  Crazy Taxi Classic.sh  HANDOFF.md  README.md  build.sh  crazytaxi.gptk
ports/cuphead/: HANDOFF-SESSAO12.md  HANDOFF-SESSAO17.md  HANDOFF-X5M-KMSDRM.md  STATUS-s10.md  build.sh  cuphead  go-map-diag.sh  go-map-dl.sh  go-map3.sh  go-title.sh  go.sh  run.sh  tools-bt.c
ports/ducktales/: .gitignore  DuckTales.sh  STATUS.md  STUDY.md  build.sh  duckdis.py  run_dev.sh  run_fulllog.sh  run_play88.sh  run_stencil_test.sh
ports/dusklight/: PLANO-WGPU-GLES2.md  README.md  STATUS.md  build.sh  dusklight  launch.sh
ports/dysmantle/: CHANGELOG.md  DYSMANTLE.sh  ESTUDO-PERF-RAM-1GB.md  ESTUDO-TEXTURAS-OFFLINE.md  HANDOFF-V5-CACHE-ETC1.md  HANDOFF-V5-LEANPAK.md  INVESTIGACAO-MUNDO-BRANCO.md  README.md  STATUS.md  build.sh  build_compat_gcc.sh  build_tools_aarch64.sh  dysmantle  dysmantle.compat  dysmantle.compat.gcc  dysmantle.gptk  fixpak  fixpak.aarch64  gameinfo.xml  port.json  texbake.aarch64
ports/elderand/: .gitignore  BANCADA_CAPTURA.md  HANDOFF.md  HANDOFF_s7.md  HANDOFF_s8.md  README.md  RETOMAR_s10.md  build.sh  eld_got_binds.h  elderand  gdbstk.sh  run.sh  run_test.sh
ports/ff7/: Final Fantasy VII.sh  STATUS.md  aud.gdb  aud2.gdb  aud2run.sh  aud3.gdb  aud3run.sh  aud4.gdb  aud4run.sh  aud5.gdb  aud5run.sh  aud6.gdb  aud6run.sh  aud7.gdb  aud7run.sh  aud8.gdb  aud8run.sh  audrun.sh  btpresent.sh  build.sh  cfgtest.sh  ff7  ff7.BACKUP-AUDIO-OK  ff7.BACKUP-bgm-bypass  ff7.BACKUP-creditos-ok  ff7.BACKUP-fmv-ok  ff7.BACKUP-fmv-tripbuf  ff7.BACKUP-fmvend-fix  fillcb.gdb  fillcbrun.sh  fin.gdb  finrun.sh  fwrun.sh  fwtrace.gdb  gdbrun.sh  rec.gdb  rec2.gdb  rec2run.sh  recrun.sh  rt.gdb  (+10 more)
ports/ff9/: .gitignore  HANDOFF.md  STUDY.md  build.sh  ff9  ff9.TITLE-OK-BACKUP  gdbact.sh  gdball.sh  gdbbp.sh  (+9 more)
template/: CMakeLists.txt
template-arm/: README.md  build.sh.tmpl  imports-shims.c  main.c.tmpl  so_util.c  so_util.h
tools/: build-port.sh  new-port-arm.sh
(+498 files in other folders)
